# 01-RTR_OpenGL

01-Windows/01-FFP/01-Window/src/: main.cpp
01-Windows/01-FFP/01-Window/src/window/: Window.cpp  Window.h
01-Windows/01-FFP/02-CenteringOfWindow/01-GetSystemMetrics/: readme.md
01-Windows/01-FFP/03-Icon/: CMakeLists.txt  readme.md
01-Windows/01-FFP/03-Icon/src/window/: Window.cpp  Window.h
01-Windows/01-FFP/04-Fullscreen/: CMakeLists.txt
01-Windows/01-Window/01-Window/src/window/: Window.h
01-Windows/01-Window/02-CenteringOfWindow/01-GetSystemMetrics/src/: main.cpp
01-Windows/01-Window/03-Icon/src/: main.cpp
01-Windows/01-Window/04-Fullscreen/: readme.md
01-Windows/01-Window/04-Fullscreen/src/: main.cpp
01-Windows/01-Window/04-Fullscreen/src/window/: Window.cpp  Window.h
01-Windows/02-PP/01-PerspectiveTriangle/: readme.md
01-Windows/02-PP/01-PerspectiveTriangle/src/: main.cpp
01-Windows/02-PP/01-PerspectiveTriangle/src/OGL/: buffer.cpp  buffer.h  shader.cpp  shader.h  triangle.cpp  triangle.h
01-Windows/02-PP/01-PerspectiveTriangle/src/window/: Window.h
01-Windows/02-PP/02-PerspectiveSquare/: CMakeLists.txt  CMakeSettings.json  readme.md
01-Windows/02-PP/02-PerspectiveSquare/src/: main.cpp
01-Windows/02-PP/02-PerspectiveSquare/src/OGL/: buffer.cpp  global.h  plane.cpp  plane.h
01-Windows/02-PP/02-PerspectiveSquare/src/window/: Window.h
01-Windows/02-PP/03-2DRotation/: readme.md
01-Windows/02-PP/03-2DRotation/src/: main.cpp
01-Windows/02-PP/03-2DRotation/src/window/: Window.cpp
01-Windows/02-PP/04-3DRotation/src/: main.cpp
01-Windows/02-PP/04-3DRotation/src/OGL/: buffer.h  cube.cpp  cube.h  global.h  shader.cpp  shader.h
01-Windows/02-PP/04-3DRotation/src/utils/: Logger.h
01-Windows/02-PP/04-3DRotation/src/window/: Window.cpp
01-Windows/02-PP/05-3DProceduralGeometries/: CMakeLists.txt  readme.md
01-Windows/02-PP/05-3DProceduralGeometries/src/: main.cpp
01-Windows/02-PP/05-3DProceduralGeometries/src/OGL/: buffer.cpp  buffer.h  objects.h  plane.cpp  precomp.h  pyramid.cpp
01-Windows/02-PP/05-3DProceduralGeometries/src/window/: Window.cpp
01-Windows/02-PP/06-Textures/: readme.md
01-Windows/02-PP/06-Textures/src/: OGL.cpp  OGL.h  main.cpp
01-Windows/02-PP/06-Textures/src/OGL/: global.h  objects.cpp  precomp.h  pyramid.h  shader.cpp  shader.h  texture.h
01-Windows/02-PP/06-Textures/src/window/: Window.h  Window.rc
01-Windows/02-PP/07-Camera/: readme.md
01-Windows/02-PP/07-Camera/src/OGL/: cube.cpp  geomat.h  objects.cpp  objects.h  shader.cpp  shader.h  triangle.cpp
01-Windows/02-PP/08-Diffiused Light/: readme.md
01-Windows/02-PP/08-Diffiused Light/src/: OGL.cpp  OGL.h  main.cpp
01-Windows/02-PP/08-Diffiused Light/src/window/: Window.cpp
01-Windows/02-PP/09-Ambient+Diffused+Specular/: readme.md
01-Windows/02-PP/09-Ambient+Diffused+Specular/src/: OGL.cpp
01-Windows/02-PP/09-Phong Ambient+Diffused+Specular PerVertex/: CMakeLists.txt  readme.md
01-Windows/02-PP/09-Phong Ambient+Diffused+Specular PerVertex/src/: main.cpp
01-Windows/02-PP/09-Phong Ambient+Diffused+Specular PerVertex/src/OGL/: buffer.cpp  cube.h  global.h  objects.cpp  plane.cpp  plane.h  precomp.h  pyramid.cpp  triangle.h
01-Windows/02-PP/09-Phong Ambient+Diffused+Specular PerVertex/src/utils/: Logger.h
01-Windows/02-PP/09-Phong Ambient+Diffused+Specular PerVertex/src/window/: Window.h
01-Windows/02-PP/10-Phong Ambient+Diffused+Specular Perfragment/: PointsToRember.md
01-Windows/02-PP/11-Phong Ambient+Diffused+Specular Perfragment - Copy/: CMakeSettings.json  readme.md
01-Windows/02-PP/11-Phong Ambient+Diffused+Specular Perfragment - Copy/src/: OGL.cpp
01-Windows/02-PP/12-TwoLightsOnCube/: readme.md
01-Windows/02-PP/12-TwoLightsOnCube/src/: OGL.cpp  main.cpp
01-Windows/02-PP/12-TwoLightsOnCube/src/OGL/: buffer.h  global.h
01-Windows/02-PP/13-ThreeLightsOnSphere/: readme.md
01-Windows/02-PP/13-ThreeLightsOnSphere/src/: OGL.cpp  main.cpp
01-Windows/02-PP/13-ThreeLightsOnSphere/src/OGL/: precomp.h  shader.cpp
01-Windows/02-PP/13-ThreeLightsOnSphere/src/utils/: fpsStats.h
01-Windows/02-PP/13-ThreeLightsOnSphere/src/window/: Window.h
01-Windows/02-PP/14-SunEarthMoonRotation/: readme.md
01-Windows/02-PP/14-SunEarthMoonRotation/src/: OGL.cpp  OGL.h
01-Windows/02-PP/14-SunEarthMoonRotation/src/OGL/: global.h  precomp.h
01-Windows/02-PP/15-ModelLoading/: readme.md
01-Windows/02-PP/15-ModelLoading/src/: OGL.cpp  main.cpp
01-Windows/02-PP/15-ModelLoading/src/OGL/: global.h  model.h  texture.h
01-Windows/02-PP/15-ModelLoading/src/window/: Window.cpp
01-Windows/02-PP/16-ModelLoadingWithTextures/: PointsToRember.md  readme.md
01-Windows/02-PP/16-ModelLoadingWithTextures/src/: OGL.cpp  OGL.h  main.cpp
01-Windows/02-PP/16-ModelLoadingWithTextures/src/OGL/: global.h  precomp.h  shader.h  texture.cpp  texture.h
01-Windows/02-PP/17-CubeMap/: CMakeLists.txt
01-Windows/02-PP/17-CubeMap/src/: OGL.cpp
01-Windows/02-PP/17-CubeMap/src/OGL/: geomat.h  model.h  objects.cpp  shader.cpp
01-Windows/02-PP/17-CubeMap/src/window/: Window.cpp  Window.h
01-Windows/02-PP/18-EnvironmentMap/: readme.md
01-Windows/02-PP/18-EnvironmentMap/src/: OGL.cpp
01-Windows/02-PP/18-EnvironmentMap/src/OGL/: objects.h
01-Windows/02-PP/19-ImGUI/: readme.md
01-Windows/02-PP/19-ImGUI/src/: OGL.cpp  OGL.h  main.cpp
01-Windows/02-PP/19-ImGUI/src/OGL/: global.h  precomp.h
01-Windows/02-PP/19-ImGUI/src/utils/: ImguiManager.cpp
01-Windows/02-PP/20-AdvanceLighting/: readme.md
01-Windows/02-PP/20-AdvanceLighting/src/: OGL.cpp  OGL.h
01-Windows/02-PP/20-AdvanceLighting/src/OGL/: cube.cpp  global.h
01-Windows/02-PP/21-PointLight/: CMakeLists.txt  build.bat  readme.md
01-Windows/02-PP/21-PointLight/src/: OGL.cpp  main.cpp
01-Windows/02-PP/21-PointLight/src/OGL/: global.h  triangle.cpp
01-Windows/02-PP/21-PointLight/src/OGL/geometries/: torusGeometry.h
01-Windows/02-PP/21-PointLight/src/OGL/materials/: basicMaterial.cpp  shaderMaterial.cpp
01-Windows/02-PP/21-PointLight/src/utils/: ImguiManager.h
(+50 files in other folders)
